# dotday

./: .gitignore  .pre-commit-config.yaml  README.md  SETTER_PLUGIN.md  config.toml.example  dotday.py  i18n.py  pyproject.toml  render_text.py  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
i18n/: en.json  fr.json  it.json
setters/: __init__.py  awww.py  gnome.py  hyprpaper.py  illogical_impulse.py  kde.py  plugin_api.py  plugin_utils.py  swww.py
tests/: conftest.py  test_cli.py  test_config.py  test_loader.py  test_plugins.py  test_render_smoke.py
tools/: sanity_check.py
